--- a/src/components/burger-ingredients/burger-ingredients.module.css
+++ b/src/components/burger-ingredients/burger-ingredients.module.css
@@ -1,6 +1,11 @@
 .container {
-    width: 600px;
-    border: 2px dashed white;
-    min-height: 900px;
+  width: 600px;
+  min-height: 900px;
+}
 
+.wrapper {
+  box-sizing: border-box;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 24px;
 }
