--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -10,7 +10,7 @@
   display: grid;
   grid-template-columns: 1fr 290px 1fr;
   margin: 0 auto;
-  min-width: 1240px;
+  min-width: 1300px;
   width: 1240px;
 }
 
@@ -19,6 +19,13 @@
   display: flex;
   flex-direction: row;
   gap: 2px;
+}
+
+.li {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  list-style-type: none;
 }
 
 .navItems {
