--- a/src/components/burger-constructor/burger-constructor.module.css
+++ b/src/components/burger-constructor/burger-constructor.module.css
@@ -1,32 +1,33 @@
 .container {
+  align-items: flex-end;
   box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  height: 912px;
   min-height: 912px;
   width: 630px;
+}
+
+.topBottomElement {
+  padding-right: 30px;
 }
 
 .ul {
   display: flex;
   flex-direction: column;
-  gap: 16px;
-  margin-left: 0;
-  padding-left: 0;
-  padding-right: 0;
-  padding-right: 0;
+  padding-left: 32px;
 }
 
-.bun {
-  padding-right: 30px;
-}
-
-.main {
+.mainElement {
+  align-items: center;
+  display: flex;
+  list-style: none;
   padding-right: 10px;
 }
 
-.li {
-  align-items: center;
-  display: flex;
-  justify-content: flex-end;
-  list-style: none;
+.scroll {
+  overflow-y: scroll;
+  max-height: 465px;
 }
 
 .total {
@@ -35,7 +36,4 @@
   justify-content: flex-end;
 }
 
-.scroll {
-  overflow-y: scroll;
-  max-height: 370px;
-}
+
