--- a/src/components/modal/modal.module.css
+++ b/src/components/modal/modal.module.css
@@ -12,17 +12,28 @@
   background-color: #1c1c21;
   border-radius: 35px;
   display: flex;
+  justify-content: center;
   flex-direction: column;
-  height: 539px;
+  min-height: 539px;
   width: 720px;
 }
 
 .span {
   align-items: center;
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr 18px;
   height: 64px;
-  justify-content: space-between;
   width: 640px;
 }
 
+.title {
+  grid-column-start: 1;
+  grid-column-end: 2;
+  justify-content: flex-start;
+}
 
+.closeIcon {
+  grid-column-start: 2;
+  grid-column-end: 2;
+  justify-content: flex-end;
+}
