--- a/src/components/order-details/order-details.module.css
+++ b/src/components/order-details/order-details.module.css
@@ -1,3 +1,17 @@
-.container {
+.wrapper {
+  align-self: center;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  width: 520px;
+  height: 478px;
+}
 
+.span {
+  text-align: center;
+}
+
+.img {
+  height: 120px;
+  width: 120px;
 }
