--- a/src/components/modal/modal-overlay/modal-overlay.module.css
+++ b/src/components/modal/modal-overlay/modal-overlay.module.css
@@ -1,8 +1,5 @@
-.container {
-  align-items: center;
-  display: flex;
+.overlay {
   height: 100%;
-  justify-content: center;
   left: 0; top: 0; right: 0; bottom: 0;
   position: fixed;
   width: 100%;
