--- a/src/components/burger-ingredients/components/ingredient-card/ingredients-card.module.css
+++ b/src/components/burger-ingredients/components/ingredient-card/ingredients-card.module.css
@@ -3,13 +3,15 @@
   position: relative;
   max-width: 272px;
   max-height: 208px;
-
-  text-decoration: none;
-  color: white;
 }
 
 .li {
   list-style: none;
+}
+
+.link{
+  text-decoration: none;
+  color: white;
 }
 
 .img {
