Fix. Review fix

--- a/src/pages/profile/profile.module.css
+++ b/src/pages/profile/profile.module.css
@@ -27,9 +27,13 @@
   margin-bottom: 80px;
 }
 
-.link {
+.active {
   text-decoration: none;
   color: white;
+}
+
+.inactive {
+  text-decoration: none;
 }
 
 .buttons {
