--- a/src/components/number-block/number-block.module.css
+++ b/src/components/number-block/number-block.module.css
@@ -5,17 +5,21 @@
 }
 
 .ul {
+  display: flex;
+  flex-flow: column wrap;
+  gap: 4px;
   padding-left: 0;
   margin-top: 0;
   margin-bottom: 0;
-  max-height: 150px;
+  width: 100%;
+  max-height: 250px;
 }
 
 .li {
   list-style: none;
+  min-width: 146px;
 }
 
 .colored {
   color: #00CCCC;
 }
-
