--- a/src/pages/common-feed/common-feed.module.css
+++ b/src/pages/common-feed/common-feed.module.css
@@ -29,3 +29,13 @@
   height: 500px;
   margin-left: 0;
 }
+
+.ul {
+  padding-left: 0;
+  margin-top: 0;
+  padding-right: 32px;
+}
+
+.li {
+  list-style: none;
+}
