--- a/src/pages/common-feed/common-feed.module.css
+++ b/src/pages/common-feed/common-feed.module.css
@@ -13,8 +13,8 @@
 .data {
   display: flex;
   flex-direction: column;
-  width: 620px;
   height: 626px;
+  width: 620px;
 }
 
 .numbers {
@@ -24,18 +24,22 @@
 }
 
 .feed {
-  border: 1px dotted white;
-  width: 620px;
   height: 500px;
   margin-left: 0;
+  width: 620px;
 }
 
 .ul {
-  padding-left: 0;
   margin-top: 0;
-  padding-right: 32px;
+  padding-left: 0;
+  padding-right: 8px;
 }
 
 .li {
   list-style: none;
+}
+
+.scroll {
+  max-height: 700px;
+  overflow-y: scroll;
 }
