--- a/src/components/profile-navigation/profile-navigation/profile-navigation.module.css
+++ b/src/components/profile-navigation/profile-navigation/profile-navigation.module.css
@@ -1,3 +1,12 @@
+.active {
+  text-decoration: none;
+  color: white;
+}
+
+.inactive {
+  text-decoration: none;
+}
+
 .navigation {
   width: 320px;
 }
